--- a/app.css
+++ b/app.css
@@ -34,21 +34,28 @@ h4:first-of-type {
 table,
 tr,
 td {
-  border: 1px solid rgba(172, 172, 238, 0.6);
+  border: 1px solid rgba(187, 187, 245, 0.6);
+  cursor: pointer;
 }
 
 table {
   border-collapse: collapse;
+  border: 1px solid rgba(102, 102, 155, 0.8);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   margin: 0 auto;
   margin-top: 0.8em;
 }
 
+table:hover{
+  box-shadow: 1px 4px 7px 1px rgba(0, 0, 0, 0.1);
+}
+
 tr {
-  height: 15px;
+  height: 20px;
 }
 
 td {
-  width: 15px;
+  width: 20px;
 }
 
 input[type="number"] {
@@ -66,7 +73,6 @@ input[type="color"] {
   border: none;
   border-radius: 65px;
   cursor: pointer;
-  /* box-shadow: 0 2px 3px 0 rgba(0,0,0,.1); */
 }
 
 input[type="submit"] {
@@ -100,14 +106,34 @@ input[type="submit"] {
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 500px) {
+@media (max-width: 500px) {
+  body {
+    margin: 0 0.5em;
+  }
+
   .header {
-    font-size: 1.5em;
+    font-size: 2.5em;
   }
+
+  .description {
+    margin-top: 0;
+    margin: 0 2em;
+  }
+
   h4 {
-    font-size: 0.6em;
+    font-size: 0.9em;
   }
+
+  h4:first-of-type {
+    margin: 0.2em;
+  }
+
   input[type="submit"] {
-    font-size: 0.75em;
+    font-size: 0.8em;
+  }
+
+  input[type="color"] {
+    width: 25px;
+    height: 25px;
   }
 }
